fixed bottom border align

--- a/src/app/components/landing/press/press.component.scss
+++ b/src/app/components/landing/press/press.component.scss
@@ -15,7 +15,7 @@ section.press {
     max-width: 75rem;
     min-width: 270px;
     margin-right: 100px;
-    margin-bottom: 75px;
+    margin-bottom: 68px;
     div {
         p {
             color: $secondary;
@@ -112,7 +112,7 @@ ul.articles {
         min-width: 95%;
         margin-top: 0px;
         >img {
-            width: 100%;
+            width: 90%;
             cursor: pointer;
             margin-right: 1.25rem;
             margin-left: 1.25rem;
